drop doen menu, top button stays aligned, all the buttons below aligh to the left, when button is pressed for the dropdown trigger, it no longer moves all the elements inside

--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -12,6 +12,13 @@
   hover:bg-gray-500;
 }
 
+.drop-down-button{
+  @apply 
+  text-4xl
+
+  text-left
+}
+
 .contactButtons {
   @apply w-full
   text-3xl
